<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:padding="30dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/str_bienvenido"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_primera_frase"
        android:hint="@string/str_primera_frase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edt_segunda_frase"
        android:layout_marginTop="16dp"
        android:hint="@string/str_segunda_frase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_marginTop="16dp"
        android:paddingLeft="4dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:text="@string/str_nro_vocales"/>




    <LinearLayout
        android:paddingLeft="4dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:text="@string/str_frase_1"/>
        <TextView

            android:id="@+id/txv_cantidad_vocales_cerradas_f1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"/>


        <TextView
            android:layout_marginLeft="92dp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:text="@string/str_frase_2"/>
        <TextView
            android:id="@+id/txv_cantidad_vocales_cerradas_f2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"/>
    </LinearLayout>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:paddingLeft="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/str_frases_son_iguales"/>
            <TextView
                android:textStyle="bold"
                android:id="@+id/txv_frases_iguales"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" NO"/>
        </LinearLayout>

    <LinearLayout

        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_analizar_frases"
            android:layout_width="130dp"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:onClick="eventComparar"
            android:text="@string/str_comparar_frases" />

        <Button
            android:id="@+id/btn_limpiar"
            android:layout_width="130dp"
            android:layout_height="60dp"
            android:onClick="EventLimpiar"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="22dp"
            android:text="@string/str_limpiar" />
    </LinearLayout>


    </LinearLayout>
</LinearLayout>